--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+
 :root{
     --cor-fundo: #01080E;
     --cor-principal: #0B0D20;
@@ -10,6 +13,7 @@
 body {
     background-color: var(--cor-fundo);
     color: var(--cor-texto);
+    font-family: 'Inter', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,6 +32,9 @@ h1{
     color: var(--cor-destaque);
 }
 
+h1, .caixa-perguntad, .caixa-resultado{
+    font-family: 'Inter', sans-serif;
+}
 button{
     background-color: var(--cor-principal);
     color: var(--cor-destaque);
@@ -41,3 +48,18 @@ button:hover {
     background-color: var(--cor-destaque);
     color: var(--cor-secundaria);
 }
+
+.caixa-alternativas{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.caixa-resultado{
+    display: none;
+}
+
+.caixa-resultado.mostrar{
+    display: block;
+}
+
